# demo

.github/workflows/: demo.yml
led-firmware/: CMakeLists.txt  Jenkinsfile  linker.id  startup.s
shared_library/: README.md
shared_library/scripts/: build.sh  clang-format-check.sh  prepare.sh
shared_library/vars/: buildFirmware.groovy  prepareEnvironment.groovy  runClangFormat.groovy
vehicle-parking/: Jenkinsfile
